--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -41,13 +41,8 @@ jobs:
           key: bookdown-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-
 
-      - name: Build html site
-        run: bookdown::render_book('index.Rmd', 'bookdown::gitbook')
-        shell: Rscript {0}
-        
-      - name: Build pdf
-        run: bookdown::render_book('index.Rmd', 'bookdown::pdf_book')
-        shell: Rscript {0}
+      - name: Build site
+        run: bash "build.sh"
         
       - name: Deploy to GitHub pages 🚀
         if: github.event_name != 'pull_request'
