--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -41,6 +41,9 @@ jobs:
           key: bookdown-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-
 
+      - name: Install latex mk
+        run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra
+
       - name: Build site
         run: bash "build.sh"
         
