--- a/src/_output.yml
+++ b/src/_output.yml
@@ -5,7 +5,7 @@ bookdown::gitbook:
       before: |
         <li><a href="./">Teoria de Galois</a></li>
       after: |
-        <li><a href="https://github.com/mmasdeu/mybook" target="blank">Publicat amb bookdown</a></li>
+        <li><a href="https://github.com/mmasdeu/teoriadegalois" target="blank">Publicat amb bookdown</a></li>
     edit: https://github.com/mmasdeu/teoriadegalois/edit/main/%s
     download: ["pdf"]
 bookdown::pdf_book:
