--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -29,13 +29,24 @@ jobs:
 
       - uses: r-lib/actions/setup-renv@v2
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-            any::bookdown
 
+      - name: Cache bookdown results
+        uses: actions/cache@v3
+        with:
+          path: src/_bookdown_files
+          key: bookdown-${{ hashFiles('**/*Rmd') }}
+          restore-keys: bookdown-
+          
       - name: Install latex mk
         run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra
+
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache : false
+          
+          extra-packages: |
+            any::bookdown
 
       - name: Build site
         run: bash "build.sh"
