--- a/_output.yml
+++ b/_output.yml
@@ -10,7 +10,7 @@ bookdown::gitbook:
     download: ["pdf"]
 bookdown::pdf_book:
   includes:
-    in_header: preamble.tex
+    in_header: src/preamble.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
