--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -28,6 +28,7 @@ jobs:
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-renv@v2
+      - uses: mfinelli/setup-imagemagick@v1 
           
       - name: Install latex mk
         run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra
