--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build site
         run: |
-          Rscript -e 'install.packages(c("rmarkdown","bookdown","magick","pdftools"))'
+          Rscript -e 'install.packages(c("rmarkdown","bookdown","pdftools"))'
           ./build.sh
         
       - name: Deploy to GitHub pages 🚀
