--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -31,8 +31,13 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::magick
-          needs: magick
+            cache-version: 2
+            extra-packages: |
+             any::magick
+             any::pdftools
+            needs: |
+             magick
+             pdftools
           
       - name: Install latex mk
         run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra imagemagick poppler-utils
