--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -40,7 +40,7 @@ jobs:
              pdftools
           
       - name: Install latex mk
-        run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra imagemagick poppler-utils
+        run: sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra texlive-bibtex-extra biber imagemagick poppler-utils
 
       - name: Build site
         run: |
