--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -41,8 +41,7 @@ jobs:
           
       - name: Install latex mk
         run: |
-          sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-lang-spanish  texlive-lang-cyrillic texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra texlive-bibtex-extra biber imagemagick poppler-utils ttf-bitstream-vera
-          sudo initexmf --mkmaps
+          sudo apt-get udpate & sudo apt-get install -y -q latexmk texlive-full texlive-lang-spanish  texlive-lang-cyrillic texlive-latex-extra texlive-xetex fonts-freefont-ttf texlive-fonts-recommended texlive-fonts-extra texlive-bibtex-extra biber imagemagick poppler-utils ttf-bitstream-vera
 
       - name: Build site
         run: |
